fix errors on spatialge alignments, add sthet output page

--- a/projects/web-mev/src/app/d3/components/spatialge-clusters/spatialge-clusters.component.scss
+++ b/projects/web-mev/src/app/d3/components/spatialge-clusters/spatialge-clusters.component.scss
@@ -286,13 +286,14 @@ mat-slider {
 .fullOverlayDiv {
     display: flex;
     margin-left: 10px;
+    margin-bottom: 10px;
 }
 
-.tipHeader {
+.tipHeader{
     font-weight: bold;
 }
 
-.plotContainer {
+.plotContainer{
     margin-left: 0px;
     margin-top: 0px;
 }
