--- a/projects/web-mev/src/app/d3/components/spatialge-normalization/spatialge-normalization.component.scss
+++ b/projects/web-mev/src/app/d3/components/spatialge-normalization/spatialge-normalization.component.scss
@@ -301,3 +301,8 @@ mat-slider {
 .resized-canvas {
     width: auto; /* Maintain aspect ratio */
 }
+
+.scalefactor-group {
+    font-weight: bold;
+    margin: 6px 0;
+}
